--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "webrtc-signaling-server",
+  "name": "talkhive-signaling-server",
   "version": "1.0.0",
-  "description": "A simple WebRTC signaling server using WebSockets",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "ws": "^8.0.0"
   }
 }
